further work on keyboard covering login form, sending correct device os

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -17,10 +17,19 @@ page-login {
 
   .bg-image .scroll-content{
     padding: 0px !important;
+    display: flex;
+    align-items: flex-end;
   }
 
   ion-item.item-md, ion-item.item-ios {
     background-color: transparent;
+  }
+  .login-form{
+    padding-bottom: 0;
+    transition: padding-bottom 0.2s ease-in-out;
+  }
+  .login-form:focus-within{
+    padding-bottom: 250px;
   }
 
   .text-input-md, .text-input-ios {
